--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <script src="./carpeta/js/home.js"></script>
     <script src="./carpeta/js/index.js"></script>
     <script src="./carpeta/js/api.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
 
